@startuml
' NLE project schema - compact CapCut-scale model (C# / fig)
' Single project file, media referenced in place, JSON timeline document.

entity Project {
  * id : string
  --
  name : string
  appVersion : string
  createdAt : timestamp
  updatedAt : timestamp
  media : MediaAsset[]      ' flat list, no bins
  timelines : Timeline[]
  metadata : map            ' source provenance (OTIO etc.)
}

entity MediaAsset {
  * id : string
  --
  url : string              ' absolute path, referenced in place
  hash : string
  kind : enum(video, audio, image)
  durationSec : float
  width : int
  height : int
  sourceRate : FrameRate?   ' native fps (probe), used to conform clips
  sourceStartSec : float    ' available-range offset
  thumbnail : string        ' local path ref, null = not generated
  filmstrip : string
  proxyUrl : string         ' low-res playback copy
  proxyStatus : enum(none, pending, ready, failed)
  hasAudio : boolean
  offline : boolean         ' true when url no longer resolves
  tags : string[]
  metadata : map
}

entity Timeline {
  * id : string
  --
  rate : FrameRate          ' rational num/den (e.g. 24000/1001)
  revision : int
  isAutosave : boolean
  globalStartSec : float    ' start timecode
  tracks : Track[]
  markers : Marker[]        ' timeline markers (absolute)
  metadata : map
}

entity FrameRate {
  num : int
  den : int
}

entity Marker {
  * id : string
  --
  name : string
  startSec : float          ' clip: offset from clip start; track/timeline: absolute
  durSec : float            ' 0 = point marker
  color : string            ' hex
  metadata : map?
}

entity Track {
  * id : string
  --
  kind : enum(video, audio)
  index : int
  name : string
  visible : boolean         ' video: show/hide
  muted : boolean           ' audio: mute
  clips : Clip[]
  markers : Marker[]
  metadata : map
}

abstract class Clip {
  * id : string
  --
  linkGroupId : string?     ' video + linked audio move together
  enabled : boolean         ' false = ignored by playback/mix/composite
  startSec : float
  durSec : float
  speed : float
  sourceRate : FrameRate?   ' source fps; rate-ratio conform
  volume : float
  opacity : float
  fadeInSec : float
  fadeOutSec : float
  effects : EffectInstance[]
  transitionIn : TransitionRef?
  transitionOut : TransitionRef?
  markers : Marker[]        ' offsets relative to clip start
  metadata : map
}

class VideoClip {
  sourceId : string
  srcInSec : float
  srcOutSec : float
}

class AudioClip {
  sourceId : string
  srcInSec : float
  srcOutSec : float
}

class TextClip {
  text : string
  font : string
  size : int
  color : string
}

entity ExportSettings {
  width : int
  height : int
  fps : int
  codec : string
}

entity SaveService {
  ' single-file atomic writes
  path : string
  autosaveThrottleMs : int
  backupCount : int
}

entity Backups {
  path : string
  createdAt : timestamp
}

entity Cache {
  assetId : string
  kind : enum(thumb, preview, waveform)
  path : string
  derivedFromHash : string
}

Clip <|-- VideoClip
Clip <|-- AudioClip
Clip <|-- TextClip

Project ||--o{ MediaAsset : "imports"
Project ||--o{ Timeline : "contains"
Project ||--|| ExportSettings : "configures"
Timeline ||--o{ Track : "stacks"
Timeline ||--o{ Marker : "marks"
Track ||--o{ Clip : "orders"
Track ||--o{ Marker : "marks"
Clip ||--o{ Marker : "marks"
VideoClip }o--|| MediaAsset : "src"
AudioClip }o--|| MediaAsset : "src"
MediaAsset ||--o{ Cache : "regenerable"

note right of MediaAsset
  Referenced in place, never embedded.
  url is absolute; if it stops resolving
  offline=true and UI offers relink.
  thumbnail/proxyUrl are path refs,
  regenerable from the source.
end note

note right of Clip
  JSON-discriminated polymorphism:
  "$kind": "video|audio|text" on the wire.
  Cuts are non-destructive: new Clip with
  same src, new in/out. Source never mutates.
  fadeInSec / fadeOutSec are linear envelopes
  (opacity for video, volume for audio);
  sum <= durSec. Drag from clip ends.
  effects is an ordered EffectInstance stack.
  transitionIn/Out are optional TransitionRef
  at clip edges (library transitions); see
  uml/media/effects-transitions-schema.puml.
  linkGroupId pairs a video clip with its audio;
  enabled=false hides it from playback, mixing,
  compositing, and transitions. Markers on a
  clip are stored as offsets from clip start.
  sourceRate drives conform: source time maps
  at speed x (sourceRate / timelineRate), and
  placement duration scales by the inverse ratio.
end note

note right of Marker
  Editorial annotation. Clip markers are offsets
  from the clip start (may be negative when the
  mark predates the in point); track/timeline
  markers are absolute seconds. Color is hex;
  imported OTIO color names map to fixed palette.
end note

note right of Timeline
  rate is rational (FrameRate num/den) so
  23.976/29.97 timelines stay frame-accurate.
end note

note right of SaveService
  Lives outside the project document:
  atomic write to project file, throttled
  autosave, N rolling backups. Undo stack
  is in-memory in the editor session only.
end note

@enduml
